Added Allure reports in build.gradle, added TestNg plug in, changed class name